--- a/app/src/main/res/layout/fragment_edit_source.xml
+++ b/app/src/main/res/layout/fragment_edit_source.xml
@@ -7,7 +7,8 @@
         android:inputType="textMultiLine"
         android:gravity="top|start"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_run"
@@ -17,6 +18,6 @@
         android:layout_marginBottom="8dp"
         android:src="@drawable/baseline_play_arrow_white_48"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
