--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,26 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="BaseTheme" parent="AppTheme">
+        <item name="colorControlNormal">#c5c5c5</item>
+        <item name="colorControlActivated">@color/black</item>
+        <item name="colorControlHighlight">@color/black</item>
+    </style>
+
+    <style name="DefaultEditTextTheme">
+        <item name="android:colorControlNormal">@color/black</item>
+        <item name="android:colorAccent">@color/black</item>
+        <item name="android:colorControlActivated">@color/black</item>
+    </style>
+
+    <style name="CodeEditTextTheme" parent="DefaultEditTextTheme">
+        <item name="android:background">@color/grey</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:colorAccent">@color/white</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
 </resources>
