--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="alertDialogTheme">@style/CustomAlertDialog</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -29,6 +30,10 @@
         <item name="android:background">@color/grey</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:colorAccent">@color/white</item>
+    </style>
+
+    <style name="CustomAlertDialog">
+        <item name="android:colorAccent">@color/black</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
