--- a/app/src/main/res/layout/item_code_style.xml
+++ b/app/src/main/res/layout/item_code_style.xml
@@ -2,4 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="64dp">
 
+    <TextView
+        android:id="@+id/name"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_alignBaseline="@id/name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="8dp"
+        android:text="@string/delete"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
