--- a/app/src/main/res/layout/dialog_code_color.xml
+++ b/app/src/main/res/layout/dialog_code_color.xml
@@ -8,6 +8,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:hint="@string/sample_code"
+        android:theme="@style/DefaultEditTextTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
