--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="alertDialogTheme">@style/CustomAlertDialog</item>
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:buttonTint">@color/white</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -21,15 +26,13 @@
     </style>
 
     <style name="DefaultEditTextTheme">
-        <item name="android:colorControlNormal">@color/black</item>
-        <item name="android:colorAccent">@color/black</item>
-        <item name="android:colorControlActivated">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
     </style>
 
-    <style name="CodeEditTextTheme" parent="DefaultEditTextTheme">
-        <item name="android:background">@color/grey</item>
+    <style name="CodeEditTextTheme">
+        <item name="android:backgroundTint">@color/black</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:colorAccent">@color/white</item>
     </style>
 
     <style name="CustomAlertDialog">
